# typress-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  tokenizer.json
convert/: Cargo.toml  convert.py
convert/src/: main.rs
src/: main.rs
src/model/deit/: deit_embed.rs  deit_encoder.rs  deit_model.rs  mod.rs  patch_embed.rs
src/model/trocr/: attention.rs  decoder.rs  embed.rs  layer.rs
typress-core/: Cargo.toml
typress-core/src/: image_processing.rs  lib.rs
typress-core/src/model/: mod.rs
typress-core/src/model/deit/: deit_embed.rs  deit_encoder.rs  deit_model.rs
typress-core/src/model/trocr/: attention.rs  decoder.rs  embed.rs  layer.rs  mod.rs
typress-inference/: Cargo.toml
typress-inference/src/: lib.rs  main.rs  utils.rs
typress-web/: Cargo.toml  README.md  build.rs
typress-web/src/: lib.rs  utils.rs  vocab.rs  web.rs
web-page/: .gitignore  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml
web-page/assets/css/: tailwind.css
web-page/components/general/: Spinner.vue  Textbox.vue
web-page/components/general/_internal/: processColor.ts
web-page/components/icon/: information.vue
web-page/pages/: index.vue
web-page/src/: App.vue
web-page/worker/: trocr.js
