[package]
name = "typress-rs"
version = "0.1.0"
edition = "2021"
authors = ["WU Chen (@wcshds)"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = [
    "tch",
    "ndarray",
    "wgpu",
    "candle",
    "openblas",
] }
image = "0.25.2"
tokenizers = "0.19.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
