[workspace]
resolver = "2"
members = ["typress-core", "typress-inference", "typress-web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git" }
image = "0.25.1"
tokenizers = "0.19.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
