[workspace]
resolver = "2"
members = ["typress-core", "typress-inference", "typress-web", "convert"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "42f39f1", default-features = false }
burn-wgpu = { git = "https://github.com/tracel-ai/burn.git", rev = "42f39f1", default-features = false }
# burn = { git = "https://github.com/tracel-ai/burn.git", rev = "5a0c1dc", default-features = false }
# burn-wgpu = { git = "https://github.com/tracel-ai/burn.git", rev = "5a0c1dc", default-features = false }
# burn = { git = "https://github.com/wcshds/burn.git", branch = "cubecl-wcshds", default-features = false }
# burn-wgpu = { git = "https://github.com/wcshds/burn.git", branch = "cubecl-wcshds", default-features = false }
image = { version = "0.25.1", default-features = false }
tokenizers = "0.19.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
# strip = "symbols"
