[package]
name = "typress-core"
authors = ["WU Chen (@wcshds)"]
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["ndarray", "std"]
std = ["burn/std"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]

[dependencies]
burn = { workspace = true, default-features = false }
image = { workspace = true }
