[package]
name = "typress-inference"
authors = ["WU Chen (@wcshds)"]
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
ndarray = ["burn/ndarray", "typress-core/ndarray"]
ndarray-blas-accelerate = [
    "burn/ndarray",
    "burn/accelerate",
    "typress-core/ndarray",
]
ndarray-blas-netlib = [
    "burn/ndarray",
    "burn/blas-netlib",
    "typress-core/ndarray",
]
ndarray-blas-openblas = [
    "burn/ndarray",
    "burn/openblas",
    "typress-core/ndarray",
]
tch-cpu = ["burn/tch", "typress-core/tch"]
tch-gpu = ["burn/tch", "typress-core/tch"]
wgpu = ["burn/wgpu"]
candle-cpu = ["burn/candle"]
candle-gpu = ["burn/candle-cuda"]

[dependencies]
burn = { workspace = true }
typress-core = { path = "../typress-core" }
tokenizers = { workspace = true }
