[package]
name = "typress-web"
authors = ["WU Chen (@wcshds)"]
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
serde_json = { version = "*" }

[dependencies]
burn = { workspace = true, features = ["ndarray", "candle", "wgpu"] }
typress-core = { path = "../typress-core", default-features = false, features = [
    "ndarray",
] }
once_cell = { version = "1.19.0", features = ["alloc"] }

log = "0.4.22"
serde = "1.0.204"
console_error_panic_hook = "0.1.7"

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
wasm-logger = "0.2"
js-sys = "0.3"
